--- a/pyproject.toml
+++ b/pyproject.toml
@@ -242,6 +242,8 @@ extend-select = [
     "LOG",
     # pygrep-hooks
     "PGH",
+    # flake8-pie
+    "PIE",
     # flake8-quotes
     "Q",
     # flake8-return
