--- a/pyproject.toml
+++ b/pyproject.toml
@@ -244,6 +244,8 @@ extend-select = [
     "PGH",
     # flake8-pie
     "PIE",
+    # flake8-pyi
+    "PYI",
     # flake8-quotes
     "Q",
     # flake8-return
