--- a/pyproject.toml
+++ b/pyproject.toml
@@ -246,6 +246,8 @@ extend-select = [
     "PGH",
     # flake8-pie
     "PIE",
+    # pylint
+    "PL",
     # flake8-pyi
     "PYI",
     # flake8-quotes
@@ -320,6 +322,18 @@ ignore = [
     "D403",
     # `try`-`except` within a loop incurs performance overhead
     "PERF203",
+    # Too many return statements
+    "PLR0911",
+    # Too many branches
+    "PLR0912",
+    # Too many arguments in function definition
+    "PLR0913",
+    # Too many statements
+    "PLR0915",
+    # Magic value used in comparison
+    "PLR2004",
+    # `for` loop variable overwritten by assignment target
+    "PLW2901",
     # Use of `assert` detected; needed for mypy
     "S101",
     # FTP-related functions are being called; https://github.com/scrapy/scrapy/issues/4180
