Replace isort with the ruff isort rules.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,9 +116,6 @@ disable_warnings = ["include-ignored"]
 # https://github.com/nedbat/coveragepy/issues/831#issuecomment-517778185
 exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
 
-[tool.isort]
-profile = "black"
-
 [tool.pylint.MASTER]
 persistent = "no"
 jobs = 1          # >1 hides results
@@ -226,6 +223,8 @@ extend-select = [
     "FA",
     # refurb
     "FURB",
+    # isort
+    "I",
     # flake8-implicit-str-concat
     "ISC",
     # flake8-logging
