--- a/tox.ini
+++ b/tox.ini
@@ -77,15 +77,15 @@ commands =
 basepython = python3
 deps =
     {[testenv:extra-deps]deps}
-    pylint==3.2.5
+    pylint==3.3.3
 commands =
     pylint conftest.py docs extras scrapy tests
 
 [testenv:twinecheck]
 basepython = python3
 deps =
-    twine==5.1.1
-    build==1.2.1
+    twine==6.0.1
+    build==1.2.2.post1
 commands =
     python -m build --sdist
     twine check dist/*
