--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -27,7 +27,10 @@ jobs:
         - python-version: "3.13"
           env:
             TOXENV: py
-        - python-version: "3.13"
+        - python-version: "3.14.0-alpha.3"
+          env:
+            TOXENV: py
+        - python-version: "3.14.0-alpha.3"
           env:
             TOXENV: asyncio
         - python-version: pypy3.9
@@ -54,10 +57,10 @@ jobs:
           env:
             TOXENV: botocore-pinned
 
-        - python-version: "3.13"
+        - python-version: "3.14.0-alpha.3"
           env:
             TOXENV: extra-deps
-        - python-version: "3.13"
+        - python-version: "3.14.0-alpha.3"
           env:
             TOXENV: botocore
 
@@ -70,7 +73,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Install system libraries
-      if: contains(matrix.python-version, 'pypy') || contains(matrix.env.TOXENV, 'pinned')
+      if: contains(matrix.python-version, 'pypy') || contains(matrix.env.TOXENV, 'pinned') || contains(matrix.python-version, '3.14')
       run: |
         sudo apt-get update
         sudo apt-get install libxml2-dev libxslt-dev
