--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -27,7 +27,10 @@ jobs:
         - python-version: "3.13"
           env:
             TOXENV: py
-        - python-version: "3.13"
+        - python-version: "3.14.0-alpha.3"
+          env:
+            TOXENV: py
+        - python-version: "3.14.0-alpha.3"
           env:
             TOXENV: asyncio
 
