--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -44,3 +44,6 @@ jobs:
       run: |
         pip install -U tox
         tox
+
+    - name: Upload coverage report
+      uses: codecov/codecov-action@v5
