Fix tracking of coverage in subprocesses.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,12 @@ include = ["scrapy/*"]
 omit = ["tests/*"]
 disable_warnings = ["include-ignored"]
 
+[tool.coverage.paths]
+source = [
+    "scrapy",
+    ".tox/**/site-packages/scrapy"
+]
+
 [tool.coverage.report]
 # https://github.com/nedbat/coveragepy/issues/831#issuecomment-517778185
 exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
