--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     pyftpdlib >= 2.0.1
     pygments
     pytest
-    pytest-cov==4.0.0
+    pytest-cov >= 4.0.0
     pytest-xdist
     sybil >= 1.3.0  # https://github.com/cjw296/sybil/issues/20#issuecomment-605433422
     testfixtures
@@ -36,7 +36,7 @@ passenv =
 #allow tox virtualenv to upgrade pip/wheel/setuptools
 download = true
 commands =
-    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:--durations=10 docs scrapy tests} --doctest-modules
+    pytest --cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= {posargs:--durations=10 docs scrapy tests} --doctest-modules
 install_command =
     python -I -m pip install -ctests/upper-constraints.txt {opts} {packages}
 
@@ -115,7 +115,7 @@ setenv =
 install_command =
     python -I -m pip install {opts} {packages}
 commands =
-    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:--durations=10 scrapy tests}
+    pytest --cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= {posargs:--durations=10 scrapy tests}
 
 [testenv:pinned]
 basepython = {[pinned]basepython}
@@ -241,7 +241,7 @@ deps =
     {[testenv]deps}
     botocore>=1.4.87
 commands =
-    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -m requires_botocore}
+    pytest --cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -m requires_botocore}
 
 [testenv:botocore-pinned]
 basepython = {[pinned]basepython}
@@ -252,4 +252,4 @@ install_command = {[pinned]install_command}
 setenv =
     {[pinned]setenv}
 commands =
-    pytest --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -m requires_botocore}
+    pytest --cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -m requires_botocore}
