--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ minversion = 1.7.0
 [test-requirements]
 deps =
     attrs
+    coverage >= 7.4.0
     pexpect >= 4.8.0
     pyftpdlib >= 2.0.1
     pygments
@@ -26,6 +27,8 @@ deps =
 
     # mitmproxy does not support PyPy
     mitmproxy; implementation_name != 'pypy'
+setenv =
+    COVERAGE_CORE=sysmon
 passenv =
     S3_TEST_FILE_URI
     AWS_ACCESS_KEY_ID
