Drop PyPy 3.9, add a pypy3-extra-deps CI job.

--- a/tox.ini
+++ b/tox.ini
@@ -193,10 +193,30 @@ basepython = pypy3
 commands =
     pytest {posargs:--durations=10 docs scrapy tests}
 
-[testenv:pypy3-pinned]
-basepython = pypy3.9
+[testenv:pypy3-extra-deps]
+basepython = pypy3
 deps =
-    {[pinned]deps}
+    {[testenv:extra-deps]deps}
+commands =
+    pytest {posargs:--durations=10 docs scrapy tests}
+
+[testenv:pypy3-pinned]
+basepython = pypy3.10
+deps =
+    cryptography==41.0.5
+    cssselect==0.9.1
+    h2==3.1
+    itemadapter==0.1.0
+    parsel==1.5.0
+    Protego==0.1.15
+    pyOpenSSL==23.3.0
+    queuelib==1.4.2
+    service_identity==18.1.0
+    Twisted[http2]==21.7.0
+    w3lib==1.17.0
+    zope.interface==5.1.0
+    lxml==4.6.0
+    {[test-requirements]deps}
     PyPyDispatcher==2.1.0
 commands =
     pytest {posargs:--durations=10 scrapy tests}
