Re-enable coverage for pypy tox envs.

--- a/tox.ini
+++ b/tox.ini
@@ -190,15 +190,13 @@ setenv =
 
 [testenv:pypy3]
 basepython = pypy3
-commands =
-    pytest {posargs:--durations=10 docs scrapy tests}
+;commands =
+;    pytest {posargs:--durations=10 docs scrapy tests}
 
 [testenv:pypy3-extra-deps]
 basepython = pypy3
 deps =
     {[testenv:extra-deps]deps}
-commands =
-    pytest {posargs:--durations=10 docs scrapy tests}
 
 [testenv:pypy3-pinned]
 basepython = pypy3.10
@@ -218,8 +216,6 @@ deps =
     lxml==4.6.0
     {[test-requirements]deps}
     PyPyDispatcher==2.1.0
-commands =
-    pytest {posargs:--durations=10 scrapy tests}
 install_command = {[pinned]install_command}
 setenv =
     {[pinned]setenv}
