--- a/tox.ini
+++ b/tox.ini
@@ -216,6 +216,7 @@ deps =
     lxml==4.6.0
     {[test-requirements]deps}
     PyPyDispatcher==2.1.0
+commands = {[pinned]commands}
 install_command = {[pinned]install_command}
 setenv =
     {[pinned]setenv}
