--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,8 @@ deps =
 deps =
     {[test-requirements]deps}
 
-    # mitmproxy does not support PyPy
-    mitmproxy; implementation_name != 'pypy'
+    # mitmproxy does not support PyPy and fails to build on 3.14
+    mitmproxy; python_version < '3.14' and implementation_name != 'pypy'
 setenv =
     COVERAGE_CORE=sysmon
 passenv =
