Disable coverage for PyPy again.

--- a/tox.ini
+++ b/tox.ini
@@ -118,6 +118,7 @@ setenv =
 install_command =
     python -I -m pip install {opts} {packages}
 commands =
+    ; tests for docs fail with parsel < 1.8.0
     pytest --cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= {posargs:--durations=10 scrapy tests}
 
 [testenv:pinned]
@@ -190,13 +191,15 @@ setenv =
 
 [testenv:pypy3]
 basepython = pypy3
-;commands =
-;    pytest {posargs:--durations=10 docs scrapy tests}
+commands =
+    ; not enabling coverage as it significantly increases the run time
+    pytest {posargs:--durations=10 docs scrapy tests}
 
 [testenv:pypy3-extra-deps]
 basepython = pypy3
 deps =
     {[testenv:extra-deps]deps}
+commands = {[pypy3]commands}
 
 [testenv:pypy3-pinned]
 basepython = pypy3.10
@@ -216,7 +219,9 @@ deps =
     lxml==4.6.0
     {[test-requirements]deps}
     PyPyDispatcher==2.1.0
-commands = {[pinned]commands}
+commands =
+    ; disabling both coverage and docs tests
+    pytest {posargs:--durations=10 scrapy tests}
 install_command = {[pinned]install_command}
 setenv =
     {[pinned]setenv}
