--- a/tox.ini
+++ b/tox.ini
@@ -199,7 +199,7 @@ commands =
 basepython = pypy3
 deps =
     {[testenv:extra-deps]deps}
-commands = {[pypy3]commands}
+commands = {[testenv:pypy3]commands}
 
 [testenv:pypy3-pinned]
 basepython = pypy3.10
