--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,10 +4,7 @@ repos:
   hooks:
     - id: ruff
       args: [ --fix ]
-- repo: https://github.com/psf/black.git
-  rev: 24.10.0
-  hooks:
-  - id: black
+    - id: ruff-format
 - repo: https://github.com/adamchainz/blacken-docs
   rev: 1.19.1
   hooks:
