--- a/pyproject.toml
+++ b/pyproject.toml
@@ -180,6 +180,7 @@ disable = [
     "unused-argument",
     "unused-import",
     "unused-variable",
+    "useless-import-alias",  # used as a hint to mypy
     "useless-return",  # https://github.com/pylint-dev/pylint/issues/6530
     "wrong-import-position",
 
@@ -319,6 +320,8 @@ ignore = [
     "D403",
     # `try`-`except` within a loop incurs performance overhead
     "PERF203",
+    # Import alias does not rename original package
+    "PLC0414",
     # Too many return statements
     "PLR0911",
     # Too many branches
