--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ deps =
     pexpect >= 4.8.0
     pyftpdlib >= 2.0.1
     pygments
-    pytest
+    pytest != 8.2.*  # https://github.com/pytest-dev/pytest/issues/12275
     pytest-cov >= 4.0.0
     pytest-xdist
     sybil >= 1.3.0  # https://github.com/cjw296/sybil/issues/20#issuecomment-605433422
