Add WARCCacheStorage backend for HTTP cache - pyproject.toml: add warcio for WARCCacheStorage - extensions.httpcache: add WARCCacheStorage, and HTTPCacheWARCPathStyle for cache file path style specification - utils.httpobj: add dict HTTP_STATUS_MSGS, to regenerate status line messages, which appear to be missing from Scrapy - tests.test_downloadermiddleware_httpcache: add WARCCacheStorageTest, 100% coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "tldextract",
     "lxml>=4.6.0",
     "defusedxml>=0.7.1",
+    "warcio>=1.7.5",
     # Platform-specific dependencies
     'PyDispatcher>=2.0.5; platform_python_implementation == "CPython"',
     'PyPyDispatcher>=2.1.0; platform_python_implementation == "PyPy"',
