--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,6 @@
 sphinx==8.1.3
-sphinx-hoverxref==1.4.2
+# https://github.com/readthedocs/sphinx-hoverxref/issues/312
+sphinx-hoverxref @ git+https://github.com/readthedocs/sphinx-hoverxref.git@f702d3efffda796ba1d7747b64cadb732fa8a274
 sphinx-notfound-page==1.0.4
 sphinx-rtd-theme==3.0.2
 sphinx-rtd-dark-mode==1.3.0
