--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -29,7 +29,7 @@ jobs:
             TOXENV: py
         - python-version: "3.13"
           env:
-            TOXENV: asyncio
+            TOXENV: default-reactor
         - python-version: pypy3.10
           env:
             TOXENV: pypy3
@@ -40,7 +40,7 @@ jobs:
             TOXENV: pinned
         - python-version: 3.9.19
           env:
-            TOXENV: asyncio-pinned
+            TOXENV: default-reactor-pinned
         - python-version: pypy3.10
           env:
             TOXENV: pypy3-pinned
