--- a/tox.ini
+++ b/tox.ini
@@ -177,14 +177,14 @@ setenv =
     {[pinned]setenv}
 commands = {[pinned]commands}
 
-[testenv:asyncio]
+[testenv:default-reactor]
 commands =
-    {[testenv]commands} --reactor=asyncio
+    {[testenv]commands} --reactor=default
 
-[testenv:asyncio-pinned]
+[testenv:default-reactor-pinned]
 basepython = {[pinned]basepython}
 deps = {[testenv:pinned]deps}
-commands = {[pinned]commands} --reactor=asyncio
+commands = {[pinned]commands} --reactor=default
 install_command = {[pinned]install_command}
 setenv =
     {[pinned]setenv}
