Avoid duplicate CI runs

--- a/.github/workflows/tests-macos.yml
+++ b/.github/workflows/tests-macos.yml
@@ -1,5 +1,8 @@
 name: macOS
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
 
 concurrency:
   group: ${{github.workflow}}-${{ github.ref }}
