--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ deps =
     pygments
     pytest != 8.2.*  # https://github.com/pytest-dev/pytest/issues/12275
     pytest-cov >= 4.0.0
+    pytest-twisted
     pytest-xdist
     sybil >= 1.3.0  # https://github.com/cjw296/sybil/issues/20#issuecomment-605433422
     testfixtures
