tox.ini: provide a cleaner output by default when targeting specific tests

--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ passenv =
 #allow tox virtualenv to upgrade pip/wheel/setuptools
 download = true
 commands =
-    pytest --cov-config=pyproject.toml --cov=scrapy --cov-report= --cov-report=term-missing --cov-report=xml {posargs:--durations=10 docs scrapy tests} --doctest-modules
+    pytest {posargs:--cov-config=pyproject.toml --cov=scrapy --cov-report= --cov-report=term-missing --cov-report=xml --durations=10 docs scrapy tests --doctest-modules}
 install_command =
     python -I -m pip install -ctests/upper-constraints.txt {opts} {packages}
 
