--- a/.github/workflows/tests-macos.yml
+++ b/.github/workflows/tests-macos.yml
@@ -1,7 +1,9 @@
 name: macOS
 on:
   push:
-    branches: [ master ]
+    branches:
+    - master
+    - '[0-9]+.[0-9]+'
   pull_request:
 
 concurrency:
