tox: move to posargs pytest parameters that can be too noisy when running specific tests

--- a/tox.ini
+++ b/tox.ini
@@ -39,7 +39,7 @@ passenv =
 #allow tox virtualenv to upgrade pip/wheel/setuptools
 download = true
 commands =
-    pytest --cov-config=pyproject.toml --cov=scrapy --cov-report= --cov-report=term-missing --cov-report=xml {posargs:--durations=10 docs scrapy tests} --doctest-modules
+    pytest {posargs:--cov-config=pyproject.toml --cov=scrapy --cov-report= --cov-report=term-missing --cov-report=xml --durations=10 docs scrapy tests --doctest-modules}
 install_command =
     python -I -m pip install -ctests/upper-constraints.txt {opts} {packages}
 
@@ -58,7 +58,7 @@ deps =
     pytest >= 8.2.0
     w3lib >= 2.2.0
 commands =
-    mypy {posargs: scrapy tests}
+    mypy {posargs:scrapy tests}
 
 [testenv:typing-tests]
 basepython = python3.9
@@ -67,7 +67,7 @@ deps =
     {[testenv:typing]deps}
     pytest-mypy-testing==0.1.3
 commands =
-    pytest {posargs: tests_typing}
+    pytest {posargs:tests_typing}
 
 [testenv:pre-commit]
 basepython = python3
@@ -119,7 +119,7 @@ install_command =
     python -I -m pip install {opts} {packages}
 commands =
     ; tests for docs fail with parsel < 1.8.0
-    pytest --cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= {posargs:--durations=10 scrapy tests}
+    pytest {posargs:--cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= --durations=10 scrapy tests}
 
 [testenv:pinned]
 basepython = {[pinned]basepython}
@@ -266,7 +266,7 @@ deps =
     {[testenv]deps}
     botocore>=1.4.87
 commands =
-    pytest --cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -m requires_botocore}
+    pytest {posargs:--cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= tests -m requires_botocore}
 
 [testenv:botocore-pinned]
 basepython = {[pinned]basepython}
@@ -277,4 +277,4 @@ install_command = {[pinned]install_command}
 setenv =
     {[pinned]setenv}
 commands =
-    pytest --cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= {posargs:tests -m requires_botocore}
+    pytest {posargs:--cov-config=pyproject.toml --cov=scrapy --cov-report=xml --cov-report= tests -m requires_botocore}
