Make pinned envs more consistent.

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
     {[test-requirements]deps}
 
     # mitmproxy does not support PyPy
-    mitmproxy; implementation_name != 'pypy'
+    mitmproxy; implementation_name != "pypy"
 setenv =
     COVERAGE_CORE=sysmon
 passenv =
@@ -96,19 +96,18 @@ commands =
 [pinned]
 basepython = python3.9
 deps =
+    Protego==0.1.15
+    Twisted==21.7.0
     cryptography==37.0.0
     cssselect==0.9.1
-    h2==3.0
     itemadapter==0.1.0
+    lxml==4.6.0
     parsel==1.5.0
-    Protego==0.1.15
     pyOpenSSL==22.0.0
     queuelib==1.4.2
     service_identity==18.1.0
-    Twisted[http2]==21.7.0
     w3lib==1.17.0
     zope.interface==5.1.0
-    lxml==4.6.0
     {[test-requirements]deps}
 
     # mitmproxy 8.0.0 requires upgrading some of the pinned dependencies
@@ -131,47 +130,37 @@ setenv =
     {[pinned]setenv}
 commands = {[pinned]commands}
 
-[testenv:windows-pinned]
-basepython = {[pinned]basepython}
-deps =
-    {[pinned]deps}
-    PyDispatcher==2.0.5
-install_command = {[pinned]install_command}
-setenv =
-    {[pinned]setenv}
-commands = {[pinned]commands}
-
 [testenv:extra-deps]
 basepython = python3
 deps =
     {[testenv]deps}
-    boto3
-    google-cloud-storage
-    robotexclusionrulesparser
     Pillow
     Twisted[http2]
-    uvloop; platform_system != "Windows"
+    boto3
     bpython  # optional for shell wrapper tests
-    brotli; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
-    brotlicffi; implementation_name == 'pypy'  # optional for HTTP compress downloader middleware tests
-    zstandard; implementation_name != 'pypy'  # optional for HTTP compress downloader middleware tests
+    brotli; implementation_name != "pypy"  # optional for HTTP compress downloader middleware tests
+    brotlicffi; implementation_name == "pypy"  # optional for HTTP compress downloader middleware tests
+    google-cloud-storage
     ipython
+    robotexclusionrulesparser
+    uvloop; platform_system != "Windows"
+    zstandard; implementation_name != "pypy"  # optional for HTTP compress downloader middleware tests
 
 [testenv:extra-deps-pinned]
 basepython = {[pinned]basepython}
 deps =
     {[pinned]deps}
+    Pillow==8.0.0
     boto3==1.20.0
-    google-cloud-storage==1.29.0
-    Pillow==7.1.0
-    robotexclusionrulesparser==1.6.2
-    brotlipy
-    uvloop==0.14.0; platform_system != "Windows"
     bpython==0.7.1
-    zstandard==0.1; implementation_name != 'pypy'
+    brotli==0.5.2; implementation_name != "pypy"
+    brotlicffi==0.8.0; implementation_name == "pypy"
+    brotlipy
+    google-cloud-storage==1.29.0
     ipython==2.0.0
-    brotli==0.5.2; implementation_name != 'pypy'
-    brotlicffi==0.8.0; implementation_name == 'pypy'
+    robotexclusionrulesparser==1.6.2
+    uvloop==0.14.0; platform_system != "Windows"
+    zstandard==0.1; implementation_name != "pypy"
 install_command = {[pinned]install_command}
 setenv =
     {[pinned]setenv}
@@ -204,21 +193,20 @@ commands = {[testenv:pypy3]commands}
 [testenv:pypy3-pinned]
 basepython = pypy3.10
 deps =
+    PyPyDispatcher==2.1.0
+    {[test-requirements]deps}
+    Protego==0.1.15
+    Twisted==21.7.0
     cryptography==41.0.5
     cssselect==0.9.1
-    h2==3.1
     itemadapter==0.1.0
+    lxml==4.6.0
     parsel==1.5.0
-    Protego==0.1.15
     pyOpenSSL==23.3.0
     queuelib==1.4.2
     service_identity==18.1.0
-    Twisted[http2]==21.7.0
     w3lib==1.17.0
     zope.interface==5.1.0
-    lxml==4.6.0
-    {[test-requirements]deps}
-    PyPyDispatcher==2.1.0
 commands =
     ; disabling both coverage and docs tests
     pytest {posargs:--durations=10 scrapy tests}
