--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -34,25 +34,25 @@ jobs:
             TOXENV: py
         - python-version: "3.13"
           env:
-            TOXENV: asyncio
+            TOXENV: default-reactor
         - python-version: pypy3.10
           env:
             TOXENV: pypy3
 
         # pinned deps
-        - python-version: 3.9.19
+        - python-version: "3.9.21"
           env:
             TOXENV: pinned
-        - python-version: 3.9.19
+        - python-version: "3.9.21"
           env:
-            TOXENV: asyncio-pinned
+            TOXENV: default-reactor-pinned
         - python-version: pypy3.10
           env:
             TOXENV: pypy3-pinned
-        - python-version: 3.9.19
+        - python-version: "3.9.21"
           env:
             TOXENV: extra-deps-pinned
-        - python-version: 3.9.19
+        - python-version: "3.9.21"
           env:
             TOXENV: botocore-pinned
 
@@ -78,7 +78,7 @@ jobs:
       if: contains(matrix.python-version, 'pypy') || contains(matrix.env.TOXENV, 'pinned')
       run: |
         sudo apt-get update
-        sudo apt-get install libxml2-dev libxslt-dev libjpeg-dev
+        sudo apt-get install libxml2-dev libxslt-dev
 
     - name: Run tests
       env: ${{ matrix.env }}
