--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ readme = "README.rst"
 requires-python = ">=3.9"
 authors = [{ name = "Scrapy developers", email = "pablo@pablohoffman.com" }]
 maintainers = [{ name = "Pablo Hoffman", email = "pablo@pablohoffman.com" }]
-license = "BSD"
+license = "BSD-3-Clause"
 license_files = ["LICENSE"]
 
 [project.urls]
