--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ readme = "README.rst"
 requires-python = ">=3.9"
 authors = [{ name = "Scrapy developers", email = "pablo@pablohoffman.com" }]
 maintainers = [{ name = "Pablo Hoffman", email = "pablo@pablohoffman.com" }]
-license = "BSD-3-Clause"
+license = { file = "LICENSE" }
 
 [project.urls]
 Homepage = "https://scrapy.org/"
