--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -2,10 +2,9 @@ name: Windows
 on:
   push:
     branches:
-      - '**'
+    - master
+    - '[0-9]+.[0-9]+'
   pull_request:
-    branches:
-      - '**'
 
 concurrency:
   group: ${{github.workflow}}-${{ github.ref }}
