--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,10 +115,16 @@ module = "twisted"
 implicit_reexport = true
 
 [tool.bumpversion]
-current_version = "2.13.0"
+current_version = "2.13.1"
 commit = true
 tag = true
 tag_name = "{new_version}"
+
+[[tool.bumpversion.files]]
+filename = "docs/news.rst"
+search = "\\(unreleased\\)$"
+replace = "({now:%Y-%m-%d})"
+regex = true
 
 [[tool.bumpversion.files]]
 filename = "scrapy/VERSION"
