--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-        - python-version: "3.14.0-alpha.5"
+        - python-version: "3.14.0-beta.2"
           env:
             TOXENV: pylint
         - python-version: "3.9"
@@ -29,7 +29,7 @@ jobs:
         - python-version: "3.13"  # Keep in sync with .readthedocs.yml
           env:
             TOXENV: docs
-        - python-version: "3.14.0-alpha.5"
+        - python-version: "3.14.0-beta.2"
           env:
             TOXENV: twinecheck
 
