--- a/.github/workflows/tests-macos.yml
+++ b/.github/workflows/tests-macos.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14.0-alpha.4"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14.0-beta.2"]
 
     steps:
     - uses: actions/checkout@v4
