--- a/.github/workflows/tests-ubuntu.yml
+++ b/.github/workflows/tests-ubuntu.yml
@@ -32,10 +32,10 @@ jobs:
         - python-version: "3.13"
           env:
             TOXENV: py
-        - python-version: "3.14.0-alpha.4"
+        - python-version: "3.14.0-beta.2"
           env:
             TOXENV: py
-        - python-version: "3.14.0-alpha.4"
+        - python-version: "3.14.0-beta.2"
           env:
             TOXENV: default-reactor
         - python-version: pypy3.10
@@ -62,13 +62,13 @@ jobs:
           env:
             TOXENV: botocore-pinned
 
-        - python-version: "3.14.0-alpha.5"
+        - python-version: "3.14.0-beta.2"
           env:
             TOXENV: extra-deps
         - python-version: pypy3.11
           env:
             TOXENV: pypy3-extra-deps
-        - python-version: "3.14.0-alpha.5"
+        - python-version: "3.14.0-beta.2"
           env:
             TOXENV: botocore
 
