--- a/.github/workflows/tests-windows.yml
+++ b/.github/workflows/tests-windows.yml
@@ -32,10 +32,10 @@ jobs:
         - python-version: "3.13"
           env:
             TOXENV: py
-        - python-version: "3.14.0-alpha.5"
+        - python-version: "3.14.0-beta.2"
           env:
             TOXENV: py
-        - python-version: "3.14.0-alpha.5"
+        - python-version: "3.14.0-beta.2"
           env:
             TOXENV: default-reactor
 
